# open-share-client-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
mdns-tool/: Cargo.toml
mdns-tool/crates/mdns-core/: Cargo.toml
mdns-tool/crates/mdns-core/src/: announce.rs  discover.rs  lib.rs  model.rs  net.rs
mdns-tool/crates/openshare-cli/: Cargo.toml
mdns-tool/crates/openshare-cli/src/: main.rs
mdns-tool/crates/openshare-core/: Cargo.toml
mdns-tool/crates/openshare-core/src/: client.rs  config.rs  handshake.rs  keys.rs  lib.rs  manifest.rs
mdns-tool/crates/storage/: Cargo.toml
mdns-tool/crates/storage/src/: lib.rs
mdns-tool/crates/transport-quic/: Cargo.toml
mdns-tool/crates/transport-quic/src/: lib.rs
release-v0.1.0/: SHA256SUMS  openshare
scripts/: commit-each.sh  release.sh
