#[package]
#name = "openshare-cli"
#version = "0.1.0"
#edition = "2021"
#
#[dependencies]
#mdns-openshare-core = { path = "../mdns-openshare-core" }
#clap = { version = "4", features = ["derive"] }
#tracing = "0.1"
#tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
#anyhow = "1.0"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
[package]
name = "openshare-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openshare"
path = "src/main.rs"

[dependencies]
# Core library
openshare-core = { path = "../openshare-core" }
storage = { path = "../storage" }
mdns-core = { path = "../mdns-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde_json = "1"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system
dirs = "5"
hex = "0.4"
sha2 = "0.10"