[package]
name = "openshare-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["io-util", "sync"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"

# Cryptography - updated for ed25519-dalek 2.x
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
hkdf = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = "1"
hex = "0.4"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"

# Storage trait dependency
storage = { path = "../storage" }