[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["fs", "io-util"] }
async-trait = "0.1"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }